<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"

    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_anchorGravity="center_horizontal"
    tools:context=".AddListtingItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:background="@color/navigation_back_color"
            android:contentDescription="@string/todo"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_back_button" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addListingToolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/navigation_back_color"
            android:theme="@style/ToolbarTheme" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemPicture"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/ic_upload_picture"
                android:background="@drawable/white_border">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_captureImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/yellow_border"
                    android:fontFamily="@font/work_sans_bold"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/take_a_photo"
                    android:textColor="@color/textPrimaryDark"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnPickImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/white_border"
                    android:fontFamily="@font/work_sans_bold"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/upload_from_gallery"
                    android:textColor="@color/textPrimaryDark"
                    android:textSize="12dp" />
            </LinearLayout>

            <TextView
                style="@style/Input_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/select_type" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/optNonFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/work_sans_medium"
                    android:text="@string/non_food"
                    android:textColor="@color/textPrimary"
                    android:checked="true"
                    android:textSize="15sp" />
                <RadioButton
                    android:id="@+id/optFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/work_sans_medium"
                    android:text="@string/food"
                    android:textColor="@color/textPrimary"
                    android:textSize="15sp" />
            </RadioGroup>


            <Switch
                android:id="@+id/checkType"
                style="@style/Input_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wanted_listing" />

            <TextView
                style="@style/Input_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/txtItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/work_sans_medium"
                android:hint="@string/e_g_product_name"
                android:inputType="text"
                android:textColor="@color/textPrimaryDark"
                android:textSize="15sp" />

            <TextView
                style="@style/Input_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/txtItemDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/work_sans_medium"
                android:hint="@string/e_g_quality_quantity_use_by_date"
                android:inputType="textMultiLine"
                android:textColor="@color/textPrimaryDark"
                android:textSize="15sp" />

            <TextView
                style="@style/Input_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/txtQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/work_sans_medium"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textColor="@color/textPrimaryDark"
                android:textSize="15sp" />

            <TextView
                style="@style/Input_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_time" />

            <EditText
                android:id="@+id/txtPickupTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/work_sans_medium"
                android:inputType="text"
                android:textColor="@color/textPrimaryDark"
                android:textColorHint="#050505"
                android:textSize="15sp" />
            <TextView
                style="@style/Input_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Last Date" />

            <EditText
                android:id="@+id/txtLastDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="none"
                android:fontFamily="@font/work_sans_medium"
                android:textColor="@color/textPrimaryDark"
                android:textColorHint="#050505"
                android:textSize="15sp" />

            <TextView
                style="@style/Input_Title"
                android:id="@+id/pickLocaiton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_location" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <fragment
                    android:id="@+id/locationMap"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnAddListing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/yellow_border"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/add_listing"
                android:textColor="@color/textPrimaryDark"
                android:textSize="15sp" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>