<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    tools:context=".Login">

                <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/sharing"
                    android:contentDescription="@string/logo"/>

                <TextView
                    android:id="@+id/logo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textColor="@color/text_color"
                    android:text="@string/app_title"
                    android:fontFamily="@font/bangers_regular"/>

                <TextView
                    android:id="@+id/slogan_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/sign_in"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtLoginEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:boxBackgroundColor="@color/item_card"
                        android:textColorHint="@color/textSecondry">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/textSecondry"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtLoginPwd"
                        android:hint="@string/user_pwd"
                        app:passwordToggleEnabled="true"
                        app:boxBackgroundColor="@color/item_card"
                        android:textColorHint="@color/textSecondry"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textSize="18sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnForgetPwd"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_margin="5dp"
                        android:background="@color/backgroundColor"
                        android:elevation="0dp"
                        android:text="@string/forget_password" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/btn_color"
                        android:text="@string/login"
                        android:textColor="@color/textPrimaryDark" />

                    <Button
                        android:id="@+id/btnCreateAcccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:text="@string/new_user"
                        android:layout_gravity="right"
                        android:elevation="0dp"
                        android:layout_margin="5dp"/>
                    <ProgressBar
                        android:id="@+id/loginProgress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtLoginError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-30dp"
                        android:textColor="@color/textPrimaryDark"
                        android:textSize="15sp"/>




            </LinearLayout>
    </LinearLayout>
</ScrollView>