<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        tools:context=".SignUp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/sharing" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:fontFamily="@font/bangers_regular"
            android:text="@string/welcome"
            android:textColor="@color/textPrimaryDark"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/descr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_msg"
            android:textColor="@color/textPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname"
                app:boxBackgroundColor="@color/item_card"
                android:textColorHint="@color/textSecondry">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/textSecondry"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--        app:counterEnabled="true"-->
            <!--        app:counterMaxLength="15"-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname"
                app:boxBackgroundColor="@color/item_card"
                android:textColorHint="@color/textSecondry">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/textSecondry"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/item_card"
                android:textColorHint="@color/textSecondry"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="@color/textSecondry"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/item_card"
                android:textColorHint="@color/textSecondry">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/textSecondry"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSignupPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_pwd"
                android:transitionName="password_tran"
                app:boxBackgroundColor="@color/item_card"
                android:textColorHint="@color/textSecondry"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="@color/textSecondry"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSignupRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/btn_color"
                android:text="@string/sign_up"

                android:textColor="@color/textPrimaryDark" />

            <Button
                android:id="@+id/btnSignupLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@color/item_card"
                android:textColor="@color/textPrimaryDark"
                android:elevation="0dp"

                android:text="@string/have_account" />

            <ProgressBar
                android:id="@+id/sigupProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtSignupError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:textColor="@color/textPrimaryDark"
                android:textSize="15sp"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>