<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/work_sans_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_title"
        android:textColor="@color/textPrimaryDark"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:fontFamily="@font/work_sans_medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/slogan"
        android:textColor="@color/textPrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
            android:id="@+id/btnMainSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/nav_button_border"
            android:fontFamily="@font/work_sans_medium"
            android:includeFontPadding="false"
            android:text="Sign up with Email"
            android:textColor="@color/navButtons"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.957" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/already_have_acccount"
        android:textColor="@color/textPrimaryDark"
        android:textSize="15sp"
        android:fontFamily="@font/work_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnMainSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnMainSignUp"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/yellow_border"
        android:fontFamily="@font/work_sans_medium"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:textColor="@color/textPrimary"
        android:textSize="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/alreadyHaveAccount"
        app:layout_constraintEnd_toEndOf="@+id/btnMainSignUp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/alreadyHaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>